trying to fix scrolling on mobile pt2

--- a/src/App.css
+++ b/src/App.css
@@ -66,11 +66,7 @@ div {
 
 
 
-.waves
-{
-  position: absolute;
-  bottom: 0;
-}
+
 
 a {
   color: rgb(58, 181, 181);
